--- a/client/src/App.css
+++ b/client/src/App.css
@@ -747,3 +747,19 @@ footer .input-group-text {
   color: var(--color-777777);
 }
 /* Shipping page ends here */
+
+
+/* Open Store Page */
+.banner{
+  height: 300px;
+  width: 100%;
+  position: relative;
+  
+}
+.banner img{
+  position: absolute;
+  width: 100%;
+  height: auto;
+  top: 0;
+}
+/* Open Store Page ends here*/
