--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,7 +52,7 @@ a {
 
 
 .button {
-  background-color: #232f3e;
+  background-color: #febd69;
   color: rgb(26, 22, 22);
   font-size: 14px;
   padding: 13px 33px;
@@ -395,13 +395,13 @@ footer .input-group-text {
   border-color: rgba(0, 0, 0, 0.25);
 }
 .filter-card .form-check-input:checked {
-  background-color: var(--color-febd69);
+  background-color: #febd69;
   border-color: var(--color-febd69);
 }
 .sub-title {
   font-size: 14px;
   font-weight: 600;
-  color: var(--color-1c1c1b);
+  color: #1c1c1b;
   margin-bottom: 15px;
   margin-top: 20px;
 }
@@ -422,7 +422,7 @@ footer .input-group-text {
   margin-bottom: 8px;
 }
 .random-products:first-child {
-  border-bottom: 1px solid var(--color-ededed);
+  border-bottom: 1px solid #ededed;
 }
 .filter-sort-grid {
   padding: 10px;
@@ -488,7 +488,7 @@ footer .input-group-text {
   text-align: left;
 }
 .contact-inner-wrapper form .form-control {
-  background-color: var(--color-f5f5f7);
+  background-color: #f5f5f7;
   border-radius: 10px;
   border-color: transparent;
   padding: 10px;
@@ -499,7 +499,7 @@ footer .input-group-text {
 .contact-inner-wrapper address,
 .contact-inner-wrapper a,
 .contact-inner-wrapper p {
-  color: var(--color-777777);
+  color: #777777;
 }
 /* Contact Page ends */
 
