--- a/client/src/App.css
+++ b/client/src/App.css
@@ -754,7 +754,7 @@ footer .input-group-text {
   height: 300px;
   width: 100%;
   position: relative;
-  
+  padding-bottom: 500px;
 }
 .banner img{
   position: absolute;
