--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,7 +21,7 @@
   margin-bottom: 30px;
 }
 .card-wrapper {
-  background-color: white;
+  background-color: #ad9faf5e;
   box-shadow: 0 0 10px #0000001a;
   padding: 15px;
 }
@@ -114,8 +114,11 @@ a {
 
 footer {
   background-color: #d7a9eb;
+  /* margin-top: 100px; */
 }
-
+/* .container-xxl{
+  margin-top: 50px;
+} */
 footer:not(:first-child) {
   border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
@@ -167,6 +170,9 @@ footer .input-group-text {
   letter-spacing: 0.3px;
   text-transform: uppercase;
 }
+.prod-image{
+  width:60%;
+}
 .small-banner-content h5 {
   font-size: 22px;
   line-height: 34px;
@@ -182,17 +188,22 @@ footer .input-group-text {
   color: var(--color-131921);
 }
 .small-banner {
-  width: 49%;
+  width: 100%;
 }
 
 /* home wrapper 2 */
 .home-wrapper-2 {
-  background-color: var(--color-f5f5f7);
+  background-color: white;
+  /* height:45vh; */
 }
-
-/* home wrapper 2 ends */
-
-/* categories section */
+.slider{
+  padding:30px;
+  width:100%;
+  position: relative;
+  /* padding-bottom: 100px; */
+  /* margin-right: 12px; */
+  /* height:50vh; */
+}
 
 .categories {
   background-color: white;
